chore: remove old retrofit manifest attribute fix
Not applicable anymore on newer JVM versions. I don't think this worked anyway, pretty sure it needed to be specified in a start script as `--add-opens` instead of the jar manifest :/